# flowdira-backend

./: achieve_more.ipynb  main.py  pyproject.toml
api/: deps.py
api/routes/: auth_route.py  user_route.py  worker_route.py
core/: security.py
db/: base.py  session.py
docs_agent/utils/: state.py  tools.py
models/: user.py  worker.py
schemas/: user.py  worker.py
services/: auth_services.py  user_service.py  worker_services.py
